# rentre-agents

./: .gitattributes  .gitignore  .gitmodules  CLAUDE.md  CLAUDE.md.template  README.md  config.example.json  install.sh  org-chart.md
business/: coo.md
business/agile/: agile-coach.md
business/marketing/: content-marketer.md  growth-marketer.md  lead.md
business/operations/: cs-specialist.md  lead.md  operations-coordinator.md
business/product/: product-analyst.md  product-designer.md  product-manager.md
business/sales/: account-executive.md  bd-manager.md  lead.md
cron-prompts/: adr-monitor.md  daily-briefing.md  market-news.md  product-wip-report.md  tech-wip-report.md  workflow-discovery.md
docs/: MIGRATION-GUIDE.md
executive/: assistant.md  ceo.md
scripts/: backlog-builder.py  check-update.sh  init-prompt.txt  render-discovery.sh  renew-agent.sh  setup-cron-agents.sh  setup-crontab.sh  start-agent.sh  windows-startup.bat
shared-commands/: README.md  install.sh  quick-install.sh
shared-commands/rentre/: _backlog-rules.md  adr.md  agile.md  ailab.md  assistant.md  (+17 more)
tech/: cto.md
templates/: architecture.md  checklist.md  prd.md  story.md
tools/harness/: HANDOFF.md  MIGRATION.md  README.md  config.toml.example  enable-alerts.sh  install-harness.sh  pyproject.toml  slack-as-tree
tools/harness/src/harness/: __init__.py  cli.py  config.py  debounce.py  engine.py  jsonl.py  models.py
tools/harness/src/harness/alerters/: base.py  slack.py
tools/harness/src/harness/backends/: base.py  notion.py
tools/harness/tests/: conftest.py  test_engine.py
(+14 files in other folders)
